src/components/aboutpagecomponents/autononewssection/autononewssection.module.scss
.autononewssectionmain {
    background-color: var(--colorblack);
    padding: 120px 0;


    .autononewssectionhead {
        position: relative;
        padding: 0 0 0 70px;
        margin: 0 0 92px 0;

        span {
            font-size: 14px;
            font-weight: 400;
            line-height: 20px;
            letter-spacing: 2px;
            word-spacing: 2px;
            color: var(--colorwhite);
            font-family: var(--font-family1);
        }

        h4 {
            margin: 41px 0 0 0;
            font-size: 24px;
            font-weight: 400;
            line-height: 43px;
            letter-spacing: 2px;
            word-spacing: 2px;
            color: var(--colorwhite);
            font-family: var(--font-family1);
        }


        .cusoverflowdesignemain {
            position: absolute;
            top: 0;
            left: 0;
            width: 5px;
            height: 100%;

            .cusoverflowdesigne {
                width: 100%;
                height: 100%;
                position: relative;

                .cusoverflowdesigneline {
                    position: absolute;
                    top: 0;
                    left: 0;
                    width: 2px;
                    height: 100%;
                    background-color: var(--colorwhite);
                    opacity: 0.5;
                }

                .cusoverflowdesignethumb {
                    position: absolute;
                    bottom: 0;
                    left: 2px;
                    width: 3px;
                    height: 43px;
                    background-color: var(--colorwhite);
                }
            }
        }
    }

    .autononewssectionbody {
        display: grid;
        grid-template-columns: repeat(5, 1fr);
        gap: 32px;

        .autononewssectionbodyitems {
            height: 200px;
            display: flex;
            justify-content: center;
            align-items: center;

            img {
                object-fit: none;
            }
        }
    }
}

.blankimagedivmain {
    height: 760px;
    width: 100%;
    background-image: url("../../../assets/images/officeimage.webp");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

